[gd_scene load_steps=15 format=3 uid="uid://d05g5icburkn7"]

[ext_resource type="Script" path="res://scripts/ship.gd" id="1_s7wpo"]
[ext_resource type="Texture2D" uid="uid://dr6yxo7p8kuw" path="res://assets/side_menu_background.png" id="2_cea1g"]
[ext_resource type="Texture2D" uid="uid://bu4mn6i8vavn" path="res://assets/menu_title_background.png" id="3_43hi1"]
[ext_resource type="Texture2D" uid="uid://jm1bhhp8ffsb" path="res://assets/map_tiles.png" id="4_smtok"]
[ext_resource type="Texture2D" uid="uid://drcew5y3os6os" path="res://assets/copper_icon_1.png" id="5_f17nr"]
[ext_resource type="Texture2D" uid="uid://bb4qt77gf68jt" path="res://assets/bush_icon_0.png" id="6_my45h"]
[ext_resource type="Texture2D" uid="uid://k75m7nff1uar" path="res://assets/iron_icon.png" id="7_sxacv"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ahim5"]
texture = ExtResource("2_cea1g")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_a0q1w"]
texture = ExtResource("3_43hi1")

[sub_resource type="AtlasTexture" id="AtlasTexture_gn310"]
atlas = ExtResource("4_smtok")
region = Rect2(0, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_wi7pb"]
atlas = ExtResource("4_smtok")
region = Rect2(0, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2x318"]
atlas = ExtResource("4_smtok")
region = Rect2(0, 80, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_it00u"]
atlas = ExtResource("4_smtok")
region = Rect2(0, 112, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sodkg"]
atlas = ExtResource("4_smtok")
region = Rect2(32, 128, 16, 16)

[node name="Ship" type="CanvasLayer"]
script = ExtResource("1_s7wpo")

[node name="SideBar" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = 959.0
offset_top = 40.0
offset_right = 1149.0
offset_bottom = 645.0
mouse_filter = 1

[node name="Panel" type="Panel" parent="SideBar"]
texture_filter = 1
layout_mode = 0
offset_right = 190.0
offset_bottom = 605.0
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxTexture_ahim5")

[node name="Title" type="MarginContainer" parent="SideBar"]
layout_mode = 0
offset_left = 6.0
offset_top = 6.0
offset_right = 184.0
offset_bottom = 38.0

[node name="Panel" type="Panel" parent="SideBar/Title"]
texture_filter = 1
layout_mode = 2
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxTexture_a0q1w")

[node name="Label" type="Label" parent="SideBar/Title"]
layout_mode = 2
size_flags_horizontal = 4
mouse_filter = 1
text = "Ship"

[node name="Selected" type="MarginContainer" parent="SideBar"]
layout_mode = 0
offset_left = 6.0
offset_top = 41.0
offset_right = 184.0
offset_bottom = 160.0

[node name="Panel" type="Panel" parent="SideBar/Selected"]
visible = false
texture_filter = 1
layout_mode = 2
mouse_filter = 1

[node name="VBoxContainer" type="VBoxContainer" parent="SideBar/Selected"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="SideBar/Selected/VBoxContainer"]
layout_mode = 2

[node name="Picture" type="TextureRect" parent="SideBar/Selected/VBoxContainer/HBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = SubResource("AtlasTexture_gn310")

[node name="VBoxContainer" type="VBoxContainer" parent="SideBar/Selected/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Copper" type="HBoxContainer" parent="SideBar/Selected/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="CopperIcon" type="TextureRect" parent="SideBar/Selected/VBoxContainer/HBoxContainer/VBoxContainer/Copper"]
texture_filter = 1
custom_minimum_size = Vector2(18, 18)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("5_f17nr")

[node name="CopperLabel" type="Label" parent="SideBar/Selected/VBoxContainer/HBoxContainer/VBoxContainer/Copper"]
layout_mode = 2
mouse_filter = 1
text = "copper"

[node name="Stone" type="HBoxContainer" parent="SideBar/Selected/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="StoneIcon" type="TextureRect" parent="SideBar/Selected/VBoxContainer/HBoxContainer/VBoxContainer/Stone"]
texture_filter = 1
custom_minimum_size = Vector2(18, 18)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("6_my45h")

[node name="StoneLabel" type="Label" parent="SideBar/Selected/VBoxContainer/HBoxContainer/VBoxContainer/Stone"]
layout_mode = 2
mouse_filter = 1
text = "stone"

[node name="Iron" type="HBoxContainer" parent="SideBar/Selected/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="IronIcon" type="TextureRect" parent="SideBar/Selected/VBoxContainer/HBoxContainer/VBoxContainer/Iron"]
texture_filter = 1
custom_minimum_size = Vector2(18, 18)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("7_sxacv")

[node name="IronLabel" type="Label" parent="SideBar/Selected/VBoxContainer/HBoxContainer/VBoxContainer/Iron"]
layout_mode = 2
mouse_filter = 1
text = "iron"

[node name="Area" type="HBoxContainer" parent="SideBar/Selected/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="AreaIcon" type="TextureRect" parent="SideBar/Selected/VBoxContainer/HBoxContainer/VBoxContainer/Area"]
texture_filter = 1
custom_minimum_size = Vector2(18, 18)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = SubResource("AtlasTexture_wi7pb")

[node name="AreaLabel" type="Label" parent="SideBar/Selected/VBoxContainer/HBoxContainer/VBoxContainer/Area"]
layout_mode = 2
mouse_filter = 1
text = "2x2"

[node name="BuildTimer" type="Timer" parent="SideBar/Selected/VBoxContainer"]
one_shot = true

[node name="Button" type="Button" parent="SideBar/Selected/VBoxContainer"]
layout_mode = 2
mouse_filter = 1
text = "Build"

[node name="BuildOptions" type="MarginContainer" parent="SideBar"]
layout_mode = 0
offset_left = 6.0
offset_top = 187.0
offset_right = 184.0
offset_bottom = 623.0

[node name="VBoxContainer" type="VBoxContainer" parent="SideBar/BuildOptions"]
layout_mode = 2

[node name="Slab" type="HBoxContainer" parent="SideBar/BuildOptions/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4

[node name="Picture" type="TextureRect" parent="SideBar/BuildOptions/VBoxContainer/Slab"]
texture_filter = 1
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = SubResource("AtlasTexture_gn310")

[node name="Button" type="Button" parent="SideBar/BuildOptions/VBoxContainer/Slab"]
custom_minimum_size = Vector2(110, 0)
layout_mode = 2
mouse_filter = 1
text = "Select"

[node name="Timer" type="Timer" parent="SideBar/BuildOptions/VBoxContainer/Slab"]
one_shot = true

[node name="LargeSlab" type="HBoxContainer" parent="SideBar/BuildOptions/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4

[node name="Picture" type="TextureRect" parent="SideBar/BuildOptions/VBoxContainer/LargeSlab"]
texture_filter = 1
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = SubResource("AtlasTexture_2x318")

[node name="Button" type="Button" parent="SideBar/BuildOptions/VBoxContainer/LargeSlab"]
custom_minimum_size = Vector2(110, 0)
layout_mode = 2
mouse_filter = 1
text = "Select"

[node name="Timer" type="Timer" parent="SideBar/BuildOptions/VBoxContainer/LargeSlab"]
one_shot = true

[node name="Factory" type="HBoxContainer" parent="SideBar/BuildOptions/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4

[node name="Picture" type="TextureRect" parent="SideBar/BuildOptions/VBoxContainer/Factory"]
texture_filter = 1
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = SubResource("AtlasTexture_it00u")

[node name="Button" type="Button" parent="SideBar/BuildOptions/VBoxContainer/Factory"]
custom_minimum_size = Vector2(110, 0)
layout_mode = 2
mouse_filter = 1
text = "Select"

[node name="Timer" type="Timer" parent="SideBar/BuildOptions/VBoxContainer/Factory"]
one_shot = true

[node name="Drill" type="HBoxContainer" parent="SideBar/BuildOptions/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4

[node name="Picture" type="TextureRect" parent="SideBar/BuildOptions/VBoxContainer/Drill"]
texture_filter = 1
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = SubResource("AtlasTexture_sodkg")

[node name="Button" type="Button" parent="SideBar/BuildOptions/VBoxContainer/Drill"]
custom_minimum_size = Vector2(110, 0)
layout_mode = 2
mouse_filter = 1
text = "Select"

[node name="Timer" type="Timer" parent="SideBar/BuildOptions/VBoxContainer/Drill"]
one_shot = true

[connection signal="mouse_entered" from="SideBar" to="." method="_on_side_bar_mouse_entered"]
[connection signal="mouse_exited" from="SideBar" to="." method="_on_side_bar_mouse_exited"]
[connection signal="timeout" from="SideBar/Selected/VBoxContainer/BuildTimer" to="." method="_on_build_timer_timeout"]
[connection signal="pressed" from="SideBar/Selected/VBoxContainer/Button" to="." method="_on_build_button_pressed"]
[connection signal="pressed" from="SideBar/BuildOptions/VBoxContainer/Slab/Button" to="." method="_on_slab_button_pressed"]
[connection signal="pressed" from="SideBar/BuildOptions/VBoxContainer/LargeSlab/Button" to="." method="_on_large_button_pressed"]
[connection signal="pressed" from="SideBar/BuildOptions/VBoxContainer/Factory/Button" to="." method="_on_factory_button_pressed"]
[connection signal="pressed" from="SideBar/BuildOptions/VBoxContainer/Drill/Button" to="." method="_on_drill_button_pressed"]
